<resources>
    <string name="app_name">Android Basic</string>
    <string name="topings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="ty">Thank You !!</string>
    <string name="reserved">Reserved by : </string>
    <string name="your_Q">Your Quantity is : </string>
    <string name="your_B">Your Bill is : </string>
    <string name="order">Order</string>
    <string name="granule">Choco Granule</string>
</resources>
