<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rofimuslimalfarid.androidbasic.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:id="@+id/nama"
            tools:text="your name" />

        <TextView
            android:text="@string/topings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/textView121" />

        <CheckBox
            android:text="@string/granule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/checkBox" />

        <TextView
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/textView12" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:text="+"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:id="@+id/button3"
                android:onClick="increment"
                 />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/quantity_text_view"
                android:layout_weight="1" />

            <Button
                android:text="-"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="decrement"/>
        </LinearLayout>

        <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/textView3" />

        <TextView
            android:text="0$"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/price_text_view" />
        <Button
            android:text="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/order"
            android:onClick="orderPlis"
            />
    </LinearLayout>
</RelativeLayout>
